@@ -73,7 +73,13 @@ Map hoistMetaData = [
 def allJvmArgs = [
         '-Dspring.output.ansi.enabled=always',
         '-XX:TieredStopAtLevel=1',
-        '-Xmx1024m'
+        '-Xmx1024m',
+        "--add-modules=java.se",
+        "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.management/sun.management=ALL-UNNAMED",
+        "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED"
 ]
 
 bootRun {
